# NanoDet-Android-MNN

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/nanodetmnn/: MainActivity.java  nanodetMNN.java
app/src/main/jni/: CMakeLists.txt  NanoDet.cpp  NanoDet.h  jni_intereface.cpp
app/src/main/res/values/: strings.xml
